2002-11-11  Trey Matteson  <trey@apple.com>

        * History.subproj/WebBackForwardList.m:
        (-[WebBackForwardList addEntry:]):  Yank code to avoid adding a duplicate entry, to catch the
	refresh case.  That's dealt with in WebFramePrivate now.
        (-[WebBackForwardList description]):  Enhanced to print more info.

        * History.subproj/WebHistoryItem.h:
	History items now hold an array of subitems to mirror the frame tree.  One item in the tree
	is designated the target of the navigation.
        * History.subproj/WebHistoryItem.m:
        (-[WebHistoryItem dealloc]):  Release new ivars.
        (-[WebHistoryItem isTargetItem]):
        (-[WebHistoryItem setIsTargetItem:]):
	New setter and setter.
        (-[WebHistoryItem _recurseToFindTargetItem]):
        (-[WebHistoryItem targetItem]):
	Search the tree to find the target item.
        (-[WebHistoryItem children]):
        (-[WebHistoryItem addChildItem:]):
        (-[WebHistoryItem childItemWithName:]):
	Maintain and search new child item list.
        (-[WebHistoryItem description]):
	Enhanced to print out the tree of items.
        (-[WebHistoryItem dictionaryRepresentation]):
        (-[WebHistoryItem initFromDictionaryRepresentation:]):
	Save and load the new state.

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge generateFrameName]):  New call from KWQ, just forwards to Frame.
        (-[WebBridge createChildFrameNamed:withURL:renderPart:allowsScrolling:marginWidth:marginHeight:]):
	Call new frame method dedicated to this case.
        (-[WebBridge saveDocumentState:]):
        (-[WebBridge documentState]):
	Call frame methods to get the right item to save/restore to/from.

        * WebView.subproj/WebController.m:
        (-[WebController _goToItem:withLoadType:]):  Stop any current loading before going to a new item.
        (-[WebController goBack]):
        (-[WebController goForward]):